fixed css for landing page on mobile.

--- a/assets/css/orchestra.less
+++ b/assets/css/orchestra.less
@@ -12,8 +12,10 @@
 	}
 }
 
-.carousel .carousel-content {
-	height: 240px;
+@media (min-width: 767)  {
+	.carousel .carousel-content {
+		height: 240px;
+	}
 }
 
 .prettyprint {
